syntax = "proto3";
package ethermint.evm.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/pundiai/fx-core/v8/types/legacy";

// Deprecated: Do not use.
message InitEvmParamsProposal {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  EVMParams evm_params = 3;
  FeemarketParams feemarket_params = 4;
}

// Deprecated: Do not use.
message EVMParams {
  string evm_denom = 1 [ (gogoproto.moretags) = "yaml:\"evm_denom\"" ];
  bool enable_create = 2 [ (gogoproto.moretags) = "yaml:\"enable_create\"" ];
  bool enable_call = 3 [ (gogoproto.moretags) = "yaml:\"enable_call\"" ];
  repeated int64 extra_eips = 4 [
    (gogoproto.customname) = "ExtraEIPs",
    (gogoproto.moretags) = "yaml:\"extra_eips\""
  ];
  EVMChainConfig chain_config = 5 [
    (gogoproto.moretags) = "yaml:\"chain_config\"",
    (gogoproto.nullable) = false
  ];
}

// Deprecated: Do not use.
message EVMChainConfig {
  string homestead_block = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"homestead_block\""
  ];
  string dao_fork_block = 2 [
    (gogoproto.customname) = "DAOForkBlock",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"dao_fork_block\""
  ];
  bool dao_fork_support = 3 [
    (gogoproto.customname) = "DAOForkSupport",
    (gogoproto.moretags) = "yaml:\"dao_fork_support\""
  ];
  string eip150_block = 4 [
    (gogoproto.customname) = "EIP150Block",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"eip150_block\""
  ];
  string eip150_hash = 5 [
    (gogoproto.customname) = "EIP150Hash",
    (gogoproto.moretags) = "yaml:\"byzantium_block\""
  ];
  string eip155_block = 6 [
    (gogoproto.customname) = "EIP155Block",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"eip155_block\""
  ];
  string eip158_block = 7 [
    (gogoproto.customname) = "EIP158Block",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"eip158_block\""
  ];
  string byzantium_block = 8 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"byzantium_block\""
  ];
  string constantinople_block = 9 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"constantinople_block\""
  ];
  string petersburg_block = 10 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"petersburg_block\""
  ];
  string istanbul_block = 11 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"istanbul_block\""
  ];
  string muir_glacier_block = 12 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"muir_glacier_block\""
  ];
  string berlin_block = 13 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"berlin_block\""
  ];
  reserved 14, 15, 16;
  reserved "yolo_v3_block", "ewasm_block", "catalyst_block";
  string london_block = 17 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"london_block\""
  ];
}

// Deprecated: Do not use.
message FeemarketParams {
  bool no_base_fee = 1;
  uint32 base_fee_change_denominator = 2;
  uint32 elasticity_multiplier = 3;
  int64 initial_base_fee = 4;
  int64 enable_height = 5;
}
